--- a/Foodblog.html
+++ b/Foodblog.html
@@ -34,7 +34,7 @@
         <!-- ============== Hero Section ================ -->
     <div class="hero">
             <div class="left">
-                <img src="/Asset/main1.jpg" alt="">
+                <img src="/Asset/main.jpg" alt="">
 
             </div>    
             <div class="right">
